--- a/src/main/resources/templates/application.html
+++ b/src/main/resources/templates/application.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
->
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title>CorkDork - Welcome</title>
 </head>
 <body>
 <h1 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]!</h1>
-<p>Here is a lot of data that is specific to you.</p>
+<p> /application endpoint test</p>
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Sign Out"/>
 </form>
